feat: add clearpage before each section or appendix

--- a/tex/3-architektura/1-wstep.tex
+++ b/tex/3-architektura/1-wstep.tex
@@ -4,3 +4,9 @@ Niniejszy rozdział przedstawia zaproponowaną w pracy architekturę  platformy,
 
 Architektura w rozumieniu ENI jest to "zbiór reguł i metod opisujących funkcjonalność, organizację oraz implementację systemu". Niniejszy rozdział pomija aspekt implementacji, która jest omówiona w następnym rozdziale.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{3-logo.png}
+    \caption{Logo platformy Lupus. Autor: Natalia Ruszkowska, na potrzeby niniejszej pracy.}
+    \label{fig:logo}
+\end{figure}
