--- a/tex/4-implementacja/3-decyzje.tex
+++ b/tex/4-implementacja/3-decyzje.tex
@@ -13,7 +13,7 @@ Pierwszym krokiem w implementacji było wymyślenie sposobu na komunikację pomi
     \caption{Komunikacja pomiędzy Elementami Lupus. Źródło: Opracowanie własne.}\label{fig:43-komunikacja}
 \end{figure}
 
-Sposób działania został ukazany na rysunku \ref{fig:43-komunikacja}. Początkowo \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogły przyjąć postać jednego z trzech typów: Observe, Decide lub Execute\footnote{W myśl okrojonej pętli OODA}. \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} modyfikował \texttt{Status} obiektu Observe (krok 1). To wywoływało operator elementu "Observe" (krok 2). Operator Observe modyfikował \texttt{Status} obiektu Decide (krok 3). Na koniec modyfikacje otrzymywał obiekt elementu "Act" (krok 5), którego Operator przekazywał swoje \hyperlink{def:dane}{\textbf{Dane}} do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} (krok 7). 
+Sposób działania został ukazany na rysunku \ref{fig:43-komunikacja}. Początkowo \hyperlink{def:element-lupus}{\textbf{Elementy Lupus}} mogły przyjąć postać jednego z trzech typów: Observe, Decide lub Act\footnote{W myśl okrojonej pętli OODA}. \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} modyfikował \texttt{Status} obiektu Observe (krok 1), co wywoływało operator elementu Observe (krok 2). Operator Observe modyfikował \texttt{Status} obiektu Decide (krok 3). Na koniec modyfikacje otrzymywał obiekt elementu Act (krok 5), którego Operator przekazywał swoje \hyperlink{def:dane}{\textbf{Dane}} do \hyperlink{def:agent-egress}{\textbf{Agenta Egress}} (krok 7). 
 
 Z czasem jednak, aby nie narzucać konkretnej struktury pętli, zrezygnowano z trzech typów i stworzono jeden uniwersalny typ, którego Operator jest w stanie wykonać \hyperlink{def:workflow-petli}{\textbf{Workflow Akcji}}, co pozwalało na wyrażenie logiki dowolnego z 3 poprzednich typów. W ten sposób spełniono \hyperref[req:10]{Wymaganie 10}.
 
