--- a/tex/appendix/4-lupin-lupout.tex
+++ b/tex/appendix/4-lupin-lupout.tex
@@ -13,7 +13,7 @@ Specyfikacja w formie elektronicznej znajduje się pod linkiem: \url{https://git
 
 \hyperlink{def:projektant}{\textbf{Projektant}} może zdefiniować wiele \hyperlink{def:element-lupus}{\textbf{Elementów Lupus}}, połączonych na różne, skomplikowane sposoby. Musi jednak zdecydować, który z nich zostanie wywołany przez \hyperlink{def:agent-ingress}{\textbf{Agenta Ingress}}. Taki element można nazwać \hyperlink{def:element-ingres}{\textbf{Elementem Ingress}}. \hyperlink{def:lupus}{\textbf{Lupus}} zaleca posiadanie tylko jednego \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}.
 
-Jeśli \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} chce zasygnalizować, że można zaobserwować nowy stan \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}} (co oznacza, że musi zostać uruchomiona nowa iteracja \hyperlink{def:zamknieta-petla-sterowania}{\textbf{Pętli Sterowania}}), musi zmodyfikować pole \texttt{Status.Input} w \textit{obiekcie API} \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}. Wartość umieszczona w tym polu będzie reprezentować nowy \hyperlink{def:stan-aktualny}{\textbf{Aktualny Stan}}.
+Jeśli \hyperlink{def:agent-ingress}{\textbf{Agent Ingress}} chce zasygnalizować, że można zaobserwować nowy stan \hyperlink{def:system-zarzadzany}{\textbf{Systemu Zarządzanego}} (co oznacza, że musi zostać uruchomiona nowa iteracja \hyperlink{def:zamknieta-petla-sterowania}{\textbf{Pętli Sterowania}}), musi zmodyfikować pole \texttt{Status.Input} w \textit{obiekcie API} \hyperlink{def:element-ingres}{\textbf{Elementu Ingress}}. Wartość umieszczona w tym polu będzie reprezentować nowy \hyperlink{def:stan-aktualny}{\textbf{Stan Aktualny}}.
 
 Pole \texttt{Status.Input} w \hyperlink{def:element-ingres}{\textbf{Ingress Element CR}} jest typu \texttt{RawExtension}, co oznacza, że podlega pod specyfikację \hyperlink{def:dane}{\textbf{Danych}} (\hyperref[appendix:5]{Załącznik 5}).
 
