--- a/tex/appendix/6-akcje.tex
+++ b/tex/appendix/6-akcje.tex
@@ -10,7 +10,7 @@ Czasami operacja, która na pierwszy rzut oka wydaje się atomowa, wymaga użyci
 
 \subsection{Podział ogólny}
 
-Mamy 8 typów akcji:
+Zdefiniowano 8 typów akcji:
 
 \begin{itemize}
     \item \textbf{Send}
@@ -23,7 +23,7 @@ Mamy 8 typów akcji:
     \item \textbf{Switch}
 \end{itemize}
 
-Możemy wyróżnić następujące kategorie:
+Wśród, których można wyróżnić następujące kategorie:
 
 \begin{itemize}
     \item 6 akcji, które mogą być używane do modyfikacji danych: \\ 
@@ -40,7 +40,7 @@ Możemy wyróżnić następujące kategorie:
 
 \subsection{Przykłady}
 
-Załącznik przedstawi przykładowe użycie 6 akcji, które mogą modyfikować dane.
+Załącznik przedstawi przykładowe użycie sześciu akcji, które mogą modyfikować dane.
 
 Każdy przykład zawiera:
 
@@ -76,3 +76,7 @@ Każdy przykład zawiera:
     \caption{Przykład modyfikacji danych przez akcje Duplicate. Źródło: Opracowanie własne.}\label{fig:a6-duplicate}
 \end{figure}
 \subsubsection{Insert}
+\begin{figure}[!h]
+    \centering \includegraphics[width=1\linewidth]{a6-insert.png}
+    \caption{Przykład modyfikacji danych przez akcje Insert. Źródło: Opracowanie własne.}\label{fig:a6-duplicate}
+\end{figure}
