--- a/tex/appendix/main.tex
+++ b/tex/appendix/main.tex
@@ -1,15 +1,14 @@
 % Obrazki i tabele w załącznikach nie trafiają do spisów
 \captionsetup[figure]{list=no}
 \captionsetup[table]{list=no}
-
-\input{tex/appendix/1-definicje.tex}
-\input{tex/appendix/2-instalacja.tex}
-\input{tex/appendix/3-lupn.tex}
-\input{tex/appendix/4-lupin-lupout.tex}
-\input{tex/appendix/5-data.tex}
-\input{tex/appendix/6-akcje.tex}
-\input{tex/appendix/7-test-agent-ingress.tex}
-\input{tex/appendix/8-test-agent-egress.tex}
-\input{tex/appendix/9-test-opa.tex}
-\input{tex/appendix/10-test-lupn.tex}
-\input{tex/appendix/11-closed-loop-manager.tex}
+\clearpage \input{tex/appendix/1-definicje.tex}
+\clearpage \input{tex/appendix/2-instalacja.tex}
+\clearpage \input{tex/appendix/3-lupn.tex}
+\clearpage \input{tex/appendix/4-lupin-lupout.tex}
+\clearpage \input{tex/appendix/5-data.tex}
+\clearpage \input{tex/appendix/6-akcje.tex}
+\clearpage \input{tex/appendix/7-test-agent-ingress.tex}
+\clearpage \input{tex/appendix/8-test-agent-egress.tex}
+\clearpage \input{tex/appendix/9-test-opa.tex}
+\clearpage \input{tex/appendix/10-test-lupn.tex}
+\clearpage \input{tex/appendix/11-closed-loop-manager.tex}
