feat: add line numbers to appendix 10:

--- a/tex/appendix/10-test-lupn.tex
+++ b/tex/appendix/10-test-lupn.tex
@@ -2,7 +2,7 @@
 
 Kod w wersji elektronicznej znajduje się pod linkiem: \url{https://github.com/0x41gawor/lupus/blob/master/examples/open5gs/sample-loop/master.yaml}
 
-\begin{lstlisting}[language=sh, caption={\emph{Kod LupN}}\label{lst:a101}]
+\begin{lstlisting}[language=sh, caption={\emph{Kod LupN}}, label={lst:a101}, numbers=left, stepnumber=1]
 apiVersion: lupus.gawor.io/v1
 kind: Master
 metadata:
